# root-acccess-lib

./: README.md
CVE-2026-43499/: README.md
CVE-2026-43499/exploit/: Makefile
CVE-2026-43499/poc/: poc.c
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json
android/app/src/androidTest/java/com/example/firepassword/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/cpp/exploit/src/: util.c
android/app/src/main/cpp/exploit/src/kernelsnitch/: utils.h
android/app/src/main/java/com/example/firepassword/: ExploitBridge.kt  ExploitScreen.kt  FreeRaspApplication.kt  MainActivity.kt
android/app/src/main/java/com/example/firepassword/data/model/: AppInfo.kt  EmulatorDetector.kt  User.kt
android/app/src/main/java/com/example/firepassword/data/remote/: FirebaseSource.kt
android/app/src/main/java/com/example/firepassword/data/repository/: AuthRepository.kt  AuthRepositoryImpl.kt
android/app/src/main/java/com/example/firepassword/ui/home/: HomeScreen.kt
android/app/src/main/java/com/example/firepassword/ui/login/: LoginScreen.kt  LoginViewModel.kt
android/app/src/main/java/com/example/firepassword/utils/: Resource.kt  UiState.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/firepassword/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
exploit/: README.md  debug.js  exploit.html  index.html
(+13 files in other folders)
